k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: your-dockerhub-user/app-image:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: certs-volume
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: certs-volume
          secret:
            secretName: app-secrets
